# BigTopicModel-1

./: CMakeLists.txt  build.sh
src/engine/: dcm.h
src/formatter/: formatter.cpp
src/model/dtm/: CMakeLists-standalone.txt  CMakeLists.txt  aliastable.h  cm.h  corpus.cpp  corpus.h  dtm.cpp  dtm.h  dtm_c.cpp  dtm_formatter.cpp  lcorpus.cpp  lcorpus.h  main.cpp  mpi_circular.h  pdtm.cpp  pdtm.h  pdtm_j1.cpp  rec.txt  run_dtm.py  utils.h
src/model/lda/: main.cpp
src/util/: cva.h
